image not showing up... seeing if this fixes it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ nav li a {
 /* background images for projects */
 
 #cub2bear {
-  background-image: url(../image/cub2bear.png);
+  background-image: url(../image/cub2bear1.png);
 }
 
 #carbon-tracker {
